# bayes_tree

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/bayes_tree/: bayes_tree.hpp  categorical_distribution.hpp  conjugate_categorical_dirichlet.hpp  dirichlet_distribution.hpp  node.hpp
python/: CMakeLists.txt  bindings.cpp
src/: bayes_tree.cpp  categorical_distribution.cpp  conjugate_categorical_dirichlet.cpp  dirichlet_distribution.cpp  node.cpp
tests/: Python tests 1.ipynb  test_categorical_distribution.cpp  test_conjugate_categorical_dirichlet.cpp  test_dirichlet_distribution.cpp  test_dirichlet_distribution.py  test_tree.cpp
